[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/number/0.png" type="Texture" id=1]
[ext_resource path="res://Images/game over.png" type="Texture" id=2]
[ext_resource path="res://Script/GameOver/GameOver.gd" type="Script" id=3]

[node name="GameOver" type="Node2D"]
visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Score" type="Sprite" parent="."]

[node name="Sprite1" type="Sprite" parent="Score"]
position = Vector2( 9, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Score"]
position = Vector2( 25, 1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Score"]
position = Vector2( 41, 1 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Score"]
position = Vector2( 57, 1 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="Score"]
position = Vector2( 73, 1 )
texture = ExtResource( 1 )
